--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -48,6 +48,7 @@ header .logo h3 {
     margin-bottom: 1rem;
     padding: 25px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
